--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 url = "2.3"
 anyhow = "1.0.68"
+
+# Terminal ui lib. Not sure if I'll use this one.
+console = "0.15.5"
+dialoguer = "0.10.3"
+indicatif = "0.17.3"
