--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 error-chain = "0.12"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+curl = "0.4.44"
 url = "2.3"
 anyhow = "1.0.68"
 
