--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 error-chain = "0.12"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-curl = "0.4.44"
 url = "2.3"
 anyhow = "1.0.68"
+bytesize = "1.1.0"
 
 # Terminal ui lib. Not sure if I'll use this one.
 console = "0.15.5"
@@ -21,5 +21,5 @@ indicatif = "0.17.3"
 # New http client. Curl doesn't do it for me.
 # Actix seems good for now.
 actix-rt = "2.8.0"
-awc = { version = "3.1.0", features = ["rustls"]}
+awc = { version = "3.1.0", features = ["rustls"] }
 bytes = "1.4.0"
