--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,5 @@
 hard_tabs = true
-newline_style = "unix"
+newline_style = "Unix"
 use_field_init_shorthand = true
 use_try_shorthand = true
 group_imports = "StdExternalCrate"
