added a backend api with actix

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,10 @@ actix-rt = "2.8.0"
 awc = { version = "3.1.0", features = ["rustls"] }
 # For size limit on response body
 bytes = "1.4.0"
+
+# Http server for service to js frontend
+actix-web = "4.3.0"
+actix-cors = "0.6.4"
+
+# Runtime for main thread
+tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
